[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicon"
version = "1.0.0"
description = "Active Interconnect - A framework for differentiable online multimodal interactive perception"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Vito Mengers", email = "v.mengers@tu-berlin.de"}
]
dependencies = [
    "torch==2.4.0",
    "numpy==1.26.4",
    "tensordict-nightly==2023.6.8",
    "tyro==0.8.3",
    "docstring-parser==0.16",
    "opencv-python==4.10.0.84",
    "opencv-contrib-python==4.9.0.80",
    "psutil==5.9.8",
    "rich==13.7.1",
    "shtab==1.7.1",
    "typing-extensions==4.11.0",
    "matplotlib==3.8.4",
    "pandas==2.2.1",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "seaborn==0.13.2",
    "torchvision==0.19.0",
    "gymnasium==1.0.0",
    "pygame==2.6.1",
    "pymunk==6.9.0",
    "shapely==2.0.6",
    "networkx==3.3",
    "pillow==10.3.0",
    "tqdm==4.66.2",
    "pyyaml==6.0.1"
]

[project.urls]
Homepage = "https://git.tu-berlin.de/rbo/robotics/aicon"

[tool.setuptools]
package-dir = {"" = "src"} 
